Fixed minor layout issues: Adjusted breakpoints of footer and project section Added 3 new tranparent bar types (left,right,center) Removed text-align: center from <body>, now using bootstrap text-center  to account for breakpoints. Added invisible row with padding above "Skills" section. Adjusted Logo. Clickbox is now way more reasonable and SVG element  handles better. Had to change sizing from % based to px based.
**Next animate form entry and insert some content**

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,30 +18,39 @@
     --nav-link-color:rgba(255,200,100,1);
     --nav-hover-color:rgba(255,0,0,1);
 
-    --logo-width:30%;
+    --logo-width:40px;
 }
 
 html{
     scroll-behavior: smooth;
 }
 body{
-    text-align: center;
+    /* text-align: center; */
     color: var(--global-font-color)
 }
 
 ul {
     list-style-type: none;
 }
-form {
+/* form {
     text-align: left;
 }
 footer{
     text-align: center;
-}
+} */
 
+/* .keep-left{
+    text-align: left;
+}
+.keep-center{
+    text-align: center;
+} */
 
 .logo { 
-   
+    & svg{
+        
+        width:var(--logo-width);
+    }
     & .svg-text-1{
         fill:deepskyblue;
         font-family:Courier New;
@@ -71,6 +80,24 @@ footer{
 }
 .transparent-bar {
     background:linear-gradient(to bottom,rgba(0,0,0,.8),rgba(0,0,0,0)); 
+    margin:0px;
+    border: 1px;
+    padding: 1px;
+}
+.transparent-bar-right {
+    background:linear-gradient(to right top ,rgba(0,0,0,.8),rgba(0,0,0,.2), rgba(0,0,0,0),rgba(0,0,0,0)); 
+    margin:0px;
+    border: 1px;
+    padding: 1px;
+}
+.transparent-bar-left {
+    background:linear-gradient(to left top ,rgba(0,0,0,.8),rgba(0,0,0,.2), rgba(0,0,0,0),rgba(0,0,0,0)); 
+    margin:0px;
+    border: 1px;
+    padding: 1px;
+}
+.transparent-bar-center {
+    background:linear-gradient(to left top ,rgba(0,0,0,0),rgba(0,0,0,.1),rgba(0,0,0,.6),rgba(0,0,0,.1), rgba(0,0,0,0)); 
     margin:0px;
     border: 1px;
     padding: 1px;
